<resources>
    <string name="app_name">APP Squola</string>
    <string name="read_courses_button_text">LEGGI CORSI</string>
    <string name="intro_string">Ciao, che bello rivederti!</string>
    <string name="course_count_string">Corsi registrati attualmente: %d</string>
    <string name="course_id_string">ID:\n%d</string>
    <string name="course_title_string">Titolo:\n%s</string>
    <string name="course_hours_string">N° ore:\n%d</string>
    <string name="course_descr_string">Descrizione:\n%s</string>
    <string name="course_cost_string">Costo:\n%s</string>
    <string name="course_editions_string">N° edizioni:\n%d</string>
    <string name="ce_id_string">ID:\n%d</string>
    <string name="ce_code_string">Codice:\n%s</string>
    <string name="ce_start_string">Inizio:\n%s</string>
    <string name="ce_end_string">Fine:\n%s</string>
    <string name="ce_course_id_string">ID corso:\n%d</string>
    <string name="ce_course_title_string">Titolo corso:\n%s</string>
    <string name="course_id_label">ID</string>
    <string name="course_title_label">TITOLO</string>
    <string name="course_hours_label">N° ORE</string>
    <string name="course_desc_label">DESC.</string>
    <string name="course_cost_label">COSTO</string>
    <string name="course_editions_details_string">Queste sono le sue edizioni:</string>
    <string name="aggiungi_edizione">Aggiungi un Edizione</string>
    <string name="add_edition_title">Crea  una nuova Edizione</string>
    <string name="code_hint">Inserire il codice edizione</string>
    <string name="new_edition_start_date_label">Data di inizio</string>
    <string name="new_edition_end_date_label">Data di fine</string>
</resources>